--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Tom M</title>
+	</head>
 	<body>
-		"webpage"
-		<title>"Tom M"</title>
+		<h1>Dope new Website</h1>
+		<h2>Contact</h2>
+		<p><a href="https://htmldog.com/guides/html/beginner/links/">Gang</a></p>
 	</body>
 </html>		
