--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<body>
 		<h1>Dope new Website</h1>
 		<h2>Contact</h2>
-		<p><a href="https://htmldog.com/guides/html/beginner/links/">Gang</a></p>
+		<p><a href="contact.html">Gang</a></p>
 	</body>
 </html>		
