--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Tom M</title>
-		<link ref="stylesheet" href="style.css">
+		<link ref="stylesheet" href="/style.css">
 	</head>
 	<body>
-		<h1>Dope new Website</h1>
+		<h1>Dope Website</h1>
 		<h2>Contact</h2>
 		<p><a href="contact.html">Gang</a></p>
 	</body>
