--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Tom M</title>
-		<link ref="stylesheet" href="/style.css">
+		<link ref="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		<h1>Dope Website</h1>
