--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Tom M</title>
-		<link ref="stylesheet" type="text/css" href="Xukurpoa.github.io/style.css">
+		<link rel="stylesheet" type="text/css" href="C:/Xukurpoa.github.io/style.css"/>
 	</head>
 	<body>
 		<h1>Dope Website</h1>
