--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <html>
 	<head>
 		<title>Tom M</title>
-		<link rel="stylesheet" type="text/css" href="/style.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="C:/Xukurpoa.github.io/resources/css/style.css"/>  -->
+		 <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
+		<!-- Colors: #2C3531 #116466 #D9B08C #FFCB9A #D1E8E2 -->
+		<link rel="icon" href="/resources/img/icon.png" type="image/x-icon"/>
 	</head>
 	<body>
-		<h1>Dope Website</h1>
-		<h2>Contact</h2>
-		<p><a href="contact.html">Gang</a></p>
+		<div id="footer">
+			<p>Footer! Hoorah!</p>
+		</div>
+		<nav id="main">
+			<ul>
+				<li><a href = "resources/html/contact.html">Contact</a></li>
+				<li><a href = "resume.html">Resume</a></li>
+			</ul>
+		</nav>
+
+		<div id="content">
+			<h1>Dope Website</h1>
+			<h2>Contact</h2>
+			<p><a href="contact.html">Gang</a></p>
+		</div>
+		
 	</body>
 </html>		
