--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html>
 	<head>
 		<title>Tom M</title>
-		<!-- <link rel="stylesheet" type="text/css" href="C:/Xukurpoa.github.io/resources/css/style.css"/>  -->
-		 <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="C:/Xukurpoa.github.io/resources/css/style.css"/> -->
+		 <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/> 
 		<!-- Colors: #2C3531 #116466 #D9B08C #FFCB9A #D1E8E2 -->
-		<link rel="icon" href="/resources/img/icon.png" type="image/x-icon"/>
+		<link rel="icon" href="/resources/img/logo.ico" type="image/x-icon"/>
 	</head>
 	<body>
-		<div id="footer">
-			<p>Footer! Hoorah!</p>
+		<div id="header">
+			<img src="/resources/img/logo.png" width = "75" 
+				height = "75" alt = "TKM">
+			<div id="menu-outer">
+				<div class="table">
+					<ul id="horizontal-list">
+						<li><a href = "projects.html"><img src="/resources/img/option1.png" alt = "Projects" /></a></li>
+						<li><a href = "resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>
+						<li><a href = "resources/html/contact.html">Contact</a></li>
+						<li><a href = "support.html">Support</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<nav id="main">
-			<ul>
-				<li><a href = "resources/html/contact.html">Contact</a></li>
-				<li><a href = "resume.html">Resume</a></li>
-			</ul>
-		</nav>
-
-		<div id="content">
-			<h1>Dope Website</h1>
-			<h2>Contact</h2>
-			<p><a href="contact.html">Gang</a></p>
-		</div>
-		
 	</body>
 </html>		
