added some projects

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Tom M</title>
-		<!-- <link rel="stylesheet" type="text/css" href="C:/Xukurpoa.github.io/resources/css/style.css"/> -->
+		 <!-- <link rel="stylesheet" type="text/css" href="C:/Xukurpoa.github.io/resources/css/style.css"/> -->
 		 <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/> 
 		<!-- Colors: #2C3531 #116466 #D9B08C #FFCB9A #D1E8E2 -->
 		<link rel="icon" href="/resources/img/logo.ico" type="image/x-icon"/>
@@ -14,10 +14,11 @@
 			<div id="menu-outer">
 				<div class="table">
 					<ul id="horizontal-list">
-						<li><a href = "projects.html"><img src="/resources/img/option1.png" alt = "Projects" /></a></li>
-						<li><a href = "resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>
-						<li><a href = "resources/html/contact.html">Contact</a></li>
-						<li><a href = "support.html">Support</a></li>
+						<li><a href="/index.html"><img src="/resources/img/option5.png" alt = "Home" /></a></li>
+						<li><a href="/resources/html/projects.html"><img src="/resources/img/option1.png" alt = "Projects" /></a></li>
+						<li><a href="/resources/html/resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>
+						<li><a href="/resources/html/contact.html"><img src="/resources/img/option3.png" alt = "Contact" /></a></li>
+						<li><a href="/resources/html/support.html"><img src="/resources/img/option4.png" alt = "Support" /></a></li>
 					</ul>
 				</div>
 			</div>
