--- a/resources/html/projects.html
+++ b/resources/html/projects.html
@@ -9,7 +9,7 @@
 			<h1>List of Projects completed by Tomasz Mroz</h1>
 			<div id="Chain-Reaction">
 				<h3>Chain Reaction</h3>
-				<a href="https://github.com/Xukurpoa/ChainReaction"><img src="/resources/img/chainreaction.png" width="250"
+				<a href="https://github.com/Xukurpoa/ChainReaction"><img src="/resources/img/chainreaction.PNG" width="250"
 					height="250" alt="Chain Reaction"></a>
 				<p>A Java based implementation of the multiplayer game Chain Reaction.</p>
 			</div>
