added header to all pages

--- a/resources/html/projects.html
+++ b/resources/html/projects.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" 
 			href="/resources/css/projects.css"/> 
+		<link rel="icon" href="/resources/img/logo.ico" 
+			type="image/x-icon"/>
 	</head>
 	<body>
+		<header>
+			<img src="/resources/img/logo.png" width = "75" 
+				height = "75" alt = "TKM">
+			<div id="menu-outer">
+				<div class="table">
+					<ul id="horizontal-list">
+						<li><a href="/index.html"><img src="/resources/img/option5.png" alt = "Home" /></a></li>
+						<li><a href="/resources/html/projects.html"><img src="/resources/img/option1.png" alt = "Projects" /></a></li>
+						<li><a href="/resources/html/resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>
+						<li><a href="/resources/html/contact.html"><img src="/resources/img/option3.png" alt = "Contact" /></a></li>
+						<li><a href="/resources/html/support.html"><img src="/resources/img/option4.png" alt = "Support" /></a></li>
+					</ul>
+				</div>
+			</div>	
+		</header>
 		<div id="Projects">
 			<h1>List of Projects completed by Tomasz Mroz</h1>
 			<div id="Chain-Reaction">
 				<h3>Chain Reaction</h3>
-				<a href="https://github.com/Xukurpoa/ChainReaction"><img src="/resources/img/chainreaction.png" width="250"
+				<a href="https://github.com/Xukurpoa/ChainReaction"><img src="/resources/img/chainreaction.PNG" width="250"
 					height="250" alt="Chain Reaction"></a>
 				<p>A Java based implementation of the multiplayer game Chain Reaction.</p>
 			</div>
