--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Tom M</title>
-		 <!-- <link rel="stylesheet" type="text/css" href="C:/Xukurpoa.github.io/resources/css/style.css"/> -->
-		 <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/> 
+		<title>Home</title>
+		  <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/> 
+		<!-- <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/> -->
 		<!-- Colors: #2C3531 #116466 #D9B08C #FFCB9A #D1E8E2 -->
 		<link rel="icon" href="/resources/img/logo.ico" type="image/x-icon"/>
 	</head>
