--- a/resources/html/resume.html
+++ b/resources/html/resume.html
@@ -1,1 +1,27 @@
 <!DOCTYPE html>
+<html>
+	<head>
+	<title>Resume</title>
+		<link rel="stylesheet" type="text/css" 
+			href="/resources/css/resume.css"/> 
+		<link rel="icon" href="/resources/img/logo.ico" 
+			type="image/x-icon"/>
+	</head>
+	<body>
+		<header>
+			<img src="/resources/img/logo.png" width = "75" 
+				height = "75" alt = "TKM">
+			<div id="menu-outer">
+				<div class="table">
+					<ul id="horizontal-list">
+						<li><a href="/index.html"><img src="/resources/img/option5.png" alt = "Home" /></a></li>
+						<li><a href="/resources/html/projects.html"><img src="/resources/img/option1.png" alt = "Projects" /></a></li>
+						<li><a href="/resources/html/resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>
+						<li><a href="/resources/html/contact.html"><img src="/resources/img/option3.png" alt = "Contact" /></a></li>
+						<li><a href="/resources/html/support.html"><img src="/resources/img/option4.png" alt = "Support" /></a></li>
+					</ul>
+				</div>
+			</div>	
+		</header>
+	</body>
+</html>
