added contact info

--- a/resources/html/contact.html
+++ b/resources/html/contact.html
@@ -23,7 +23,16 @@
 				</div>
 			</div>	
 		</header>
-		<h3>Contact</h3>
-		<p>tomasz.mroz@mail.mcgill.ca</p>
+		<article>
+			<h3>Social Media</h3>
+			<nav id="social-nav">
+				<a href="https://www.facebook.com/tom.mroz.3"><img src="/resources/img/facebook.png" height ="75" width="75" alt="Facebook"/></a>
+				<a href="https://github.com/Xukurpoa"><img src="/resources/img/github.png" height="75" width="75" alt="Github"/></a>
+				<a href="https://www.linkedin.com/in/tomasz-mroz-5295b219b/"><img src="/resources/img/linkedin.png" height="75" width="75" alt="Linkedin"/></a>
+				<a href="https://angel.co/u/tomasz-mroz-2"><img src="/resources/img/angellist.jpg" height="75" width="75" alt="AngelList"/></a>
+				<a href="mailto: tomasz.mroz@mail.mcgill.ca"><img src="/resources/img/mail.png" height="75" width="75" alt="Email"/></a>
+			</nav>
+			<p>tomasz.mroz@mail.mcgill.ca</p>
+		</article>
 	</body>
 </html>		
