--- a/resources/html/projects.html
+++ b/resources/html/projects.html
@@ -27,6 +27,16 @@
 		</header>
 		<div id="Projects">
 			<h1>List of Projects Completed </h1>
+			<div id="Golf-League">
+				<a href="https://github.com/Xukurpoa/GolfLeague" ><h3>Golf League </h3></a>
+				<img src="/resources/img/golfleague.jpg" width="250"
+					height="250" alt="Golf League"/>
+				<p>The Dupont Country Club utilized visual basic to generate weekly reports
+					detailing the individual and team performances for their golf league.
+					I was commisioned to refactor and simplify their code base</p>
+					<p><i>Summer 2020</i></p>
+					<p>Languages/Technologies used: VBA,Excel</p>
+			</div>
 			<div id="Chain-Reaction">
 				<a href="https://github.com/Xukurpoa/ChainReaction" ><h3>Chain Reaction</h3></a>
 				<img src="/resources/img/chainreaction.PNG" width="250"
@@ -34,19 +44,11 @@
 				<p>A Java based implementation of the multiplayer game Chain Reaction. Two versions were made;
 					One of which implemented local multiplayer on the same device, which the latter utilized a networking API
 					in order to offer asynchronous multiplayer. The networked model was based on a hub wheel paradigm, where one player would act as the 
-					central controller for the game, exchanging messages with all the players
-				</p>
+					central controller for the game, exchanging messages with all the players</p>
+				<p><i>Summer 2019</i></p>
 				<p>Languages/Technologies used: Java, NetGame API</p>
 			</div>
-			<div id="Golf-League">
-				<a href="https://github.com/Xukurpoa/GolfLeague" ><h3>Golf League</h3></a>
-				<img src="/resources/img/golfleague.jpg" width="250"
-					height="250" alt="Golf League"/>
-				<p>The Dupont Country Club utilized visual basic to generate weekly reports
-					detailing the individual and team performances for their golf league.
-					I was commisioned to refactor and simplify their code base</p>
-					<p>Languages/Technologies used: VBA,Excel</p>
-			</div>
+			
 		</div>
 	</body>
 </html>
