--- a/resources/html/projects.html
+++ b/resources/html/projects.html
@@ -18,7 +18,7 @@
 					<ul id="horizontal-list">
 						<li><a href="/index.html"><img src="/resources/img/option5.png" alt = "Home" /></a></li>
 						<li><a href="/resources/html/projects.html"><img src="/resources/img/option1.png" alt = "Projects" /></a></li>
-						<li><a href="/resources/html/resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>
+						<!--<li><a href="/resources/html/resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>-->
 						<li><a href="/resources/html/contact.html"><img src="/resources/img/option3.png" alt = "Contact" /></a></li>
 						<li><a href="/resources/html/support.html"><img src="/resources/img/option4.png" alt = "Support" /></a></li>
 					</ul>
@@ -27,8 +27,8 @@
 		</header>
 		<div id="Projects">
 			<h1>List of Projects Completed </h1>
-			<div id="Golf-League">
-				<a href="https://github.com/Xukurpoa/GolfLeague" ><h3>Golf League </h3></a>
+			<div class="Single-Project">
+				<a href="https://github.com/Xukurpoa/GolfLeague" ><h3>Golf League</h3></a>
 				<img src="/resources/img/golfleague.jpg" width="250"
 					height="250" alt="Golf League"/>
 				<p>The Dupont Country Club utilized visual basic to generate weekly reports
@@ -37,7 +37,7 @@
 					<p><i>Summer 2020</i></p>
 					<p>Languages/Technologies used: VBA,Excel</p>
 			</div>
-			<div id="Chain-Reaction">
+			<div class="Single-Project">
 				<a href="https://github.com/Xukurpoa/ChainReaction" ><h3>Chain Reaction</h3></a>
 				<img src="/resources/img/chainreaction.PNG" width="250"
 					height="250" alt="Chain Reaction">
