--- a/resources/html/support.html
+++ b/resources/html/support.html
@@ -16,7 +16,7 @@
 					<ul id="horizontal-list">
 						<li><a href="/index.html"><img src="/resources/img/option5.png" alt = "Home" /></a></li>
 						<li><a href="/resources/html/projects.html"><img src="/resources/img/option1.png" alt = "Projects" /></a></li>
-						<li><a href="/resources/html/resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>
+						<!--<li><a href="/resources/html/resume.html"><img src="/resources/img/option2.png" alt = "Resume" /></a></li>-->
 						<li><a href="/resources/html/contact.html"><img src="/resources/img/option3.png" alt = "Contact" /></a></li>
 						<li><a href="/resources/html/support.html"><img src="/resources/img/option4.png" alt = "Support" /></a></li>
 					</ul>
