added more to home page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<title>Home</title>
 		  <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/> 
 		<!-- <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/> -->
-		<!-- Colors: #2C3531 #116466 #D9B08C #FFCB9A #D1E8E2 -->
+		<!-- Colors: #2C3531 #116466 #D9B08C #FFCB9A #D1E8E2  9xtd291di1gc7wo2c6zltakx8 -->
 		<link rel="icon" href="/resources/img/logo.ico" type="image/x-icon"/>
+		<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+			rel="stylesheet">
 	</head>
 	<body>
 		<div id="header">
@@ -24,7 +26,23 @@
 			</div>
 		</div>
 		<article>
-			<img src="/resources/img/TOM.jpg" height="auto" width="100%" alt="TOM"/>
+			<div id="intro">
+				<img src="/resources/img/TOM.jpg" height="auto" width="100%" alt="TOM"/>
+				<h2>Hi, I am Tomasz Mroz, a software engineering student at McGill University</h2>
+				<p>Proficient in Java, VBA, and Python. Fluent in English, Polish and Conversational in French </p>
+				<p>Here are a few of my qualifications (Full resume available under the contact section)</p>
+			</div>
+			<div class="job-example">
+				<h3>Manager at Drummond Hill Pool</h3>
+				<img />
+			</div>
+			<div class="job-example">
+				<h3>Technical Support for DuPont Golf League</h3>
+				<img />
+			</div>
+			<div class="job-examples">
+				<h3>Lifeguard at Drummond Hill Pool</h3>
+				<img />
 		</article>
 	</body>
 </html>		
