--- a/resources/html/projects.html
+++ b/resources/html/projects.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="/resources/img/logo.ico" 
 			type="image/x-icon"/>
 		<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-		rel="stylesheet">
+			rel="stylesheet">
 	</head>
 	<body>
 		<header>
@@ -30,7 +30,7 @@
 			<div class="Single-Project">
 				<a href="https://github.com/Xukurpoa/GolfLeague" ><h3>Golf League</h3></a>
 				<img src="/resources/img/golfleague.jpg" width="250"
-					height="250" alt="Golf League"/>
+					height="auto" alt="Golf League"/>
 				<p>The Dupont Country Club utilized visual basic to generate weekly reports
 					detailing the individual and team performances for their golf league.
 					I was commisioned to refactor and simplify their code base</p>
