--- a/resources/html/contact.html
+++ b/resources/html/contact.html
@@ -33,6 +33,7 @@
 				<a href="mailto: tomasz.mroz@mail.mcgill.ca"><img src="/resources/img/mail.png" height="75" width="75" alt="Email"/></a>
 			</nav>
 			<p>tomasz.mroz@mail.mcgill.ca</p>
+			<a href="/resources/img/gas.pdf">Resume</a>
 		</article>
 	</body>
 </html>		
